--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -14,8 +14,14 @@
     font-weight: 100;
     text-align: center;
     position: absolute;
-    margin-left: 22%;
+    margin-left: 21.5%;
     margin-top: 5%;    
+    font-size: 20em;
+}
+
+h1 {
+    font-size: 0.2em;
+    font-weight: 500;
 }
 
 #div-links {
@@ -24,8 +30,8 @@
     justify-content: space-between;
     color: white;
     height: fit-content;
-    margin-bottom: 0px;
-    font-size: 0.8em;
+    margin-bottom: 3px;
+    font-size: 1.2em;
     font-weight: 450;
     width: 57%;
     margin: auto;
@@ -34,10 +40,6 @@
 p {
     margin: 0px;
     cursor: not-allowed;
-}
-
-h1 {
-    font-weight: 500;
 }
 
 #main-div-links {
